# E-comm-ms

./: README.md  pyproject.toml
ecom/: curl_commands.txt
ecom/cart/: views.py
ecom/ecom/: settings.py  urls.py
ecom/main/: models.py  views.py
ecom_postgres/: Dockerfile  ecom_dump.sql
