[tool.poetry]
name = "e-comm-ms"
version = "0.1.0"
description = ""
authors = ["Andrey Goryachev <raikslerx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
